# python-project-templates

./: .gitignore  LICENSE  README.md  cookiecutter.json  pyproject.toml
hooks/: pre_gen_project.py
tests/: conftest.py  test_creation.py
{{ cookiecutter.repo_name }}/: .pre-commit-config.yaml  Makefile  pyproject.toml  setup.cfg
{{ cookiecutter.repo_name }}/.circleci/: config.yml
{{ cookiecutter.repo_name }}/docs/: conf.py
{{ cookiecutter.repo_name }}/tests/: test_example.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.module_name }}/data/: make_dataset.py
